<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ObsAwarePlan</name>
  <version>0.1.0</version>
  <description>
    UWB-based Obstacle-Aware SLAM planner for PX4 drones.
    Includes EKF-UWB localization, WLS anchor estimation, APF-based navigation,
    and RViz visualization for ROS 2 / PX4 simulation environments.
  </description>

  <maintainer email="davidenascivera@example.com">Davide Nascivera</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>px4_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
