<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>obs_aware_slam</name>
  <version>0.0.0</version>
  <description>Obstacle-aware UWB SLAM for UAVs using EKF and APF navigation</description>
  <maintainer email="d.nascivera@gmail.com">dave</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>px4_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
